# icedtea

./: .hgignore  AUTHORS  ChangeLog  HACKING  INSTALL  IcedTeaNPPlugin.cc  IcedTeaPlugin.cc  Makefile.am  Makefile.in  NEWS  README  README.cacao  THANKYOU  acinclude.m4  aclocal.m4  autogen.sh  configure  configure.ac  fsg.sh  fsg.sh.in  gcjwebplugin.cc  hotspot.map  hotspot.map.in  icedtea-ecj-bootstrap.patch  icedtea-ports.patch  javac.in  javah.in  javaws.desktop  jconsole.desktop  jconsole.desktop.in  linux.fontconfig.Gentoo.properties.in  nss.cfg.in  pax-mark-vm.in  policytool.desktop  policytool.desktop.in  remove-intree-libraries.sh  remove-intree-libraries.sh.in  tools-copy-files.txt  tz.properties.in  visualvm.desktop
contrib/: mixtec-hacks.patch  mixtec-sleep-on-bomb.patch
contrib/checkopts/: Test.java  checkopts.py
contrib/jck/: compile-native-code.sh
contrib/templater/: README  generate.py
patches/: 4964490-generify_hotspot_jdi.patch  6755943.patch  7192804-jvisualvm.patch  8232643-pr3761.patch  aarch32-c1.patch  aarch32-conf.patch  aarch32-jdk.patch  alpha-fixes.patch  disable-intree-ec.patch  f14-fonts.patch  fonts-gentoo.patch  gcc-suffix.patch  gh001-3curve.patch  gh001-4curve.patch  gh002-3curve-test.patch  gh003-4curve-test.patch  headers.patch  icedtea-6484091.patch  icedtea-6497740.patch  icedtea-6592792.patch  icedtea-6700047-loopopts.patch  icedtea-6712835-ifnode.patch  icedtea-6721753.patch  icedtea-6728542-epoll.patch  icedtea-6733959.patch  icedtea-6761856-freetypescaler.patch  icedtea-6766136.patch  icedtea-6977640.patch  icedtea-6open-6616825.patch  icedtea-6open-6651382.patch  icedtea-6open-6756202.patch  icedtea-LCMS-setTagData.patch  icedtea-a11y-property-change.patch  icedtea-alpha-fixes.patch  icedtea-alsa-default-device.patch  icedtea-alt-jar.patch  icedtea-always-zero.patch  icedtea-ant.patch  icedtea-antialias.patch  icedtea-arch.patch  (+253 more)
patches/boot/: ant-javac.patch  bootstrap-tools.patch  break-processbuilder-dependency.patch  compile-for-7-cacao-mem.patch  compile-for-7.patch  corba-defs.patch  corba-dependencies.patch  corba-idlj.patch  corba-libgcj.patch  corba-no-gen.patch  corba-orb.patch  demos.patch  dependencies.patch  ecj-autoboxing.patch  ecj-diamond.patch  ecj-fphexconstants.patch  ecj-multicatch.patch  ecj-odd.patch  ecj-opts.patch  ecj-stringswitch.patch  ecj-trywithresources.patch  ecj-underscored_literals.patch  explicit-inner-class-headers.patch  fontconfig.patch  fphexconstants.patch  generated-comments.patch  genstubs-nofork.patch  getannotation-cast.patch  hotspot-jdk-dependency.patch  icedtea-dbcs.patch  icedtea-dyn.patch  icedtea-euctw.patch  icedtea-hotspot-default.patch  icedtea-jaxp-dependency.patch  icedtea-jopt.patch  icedtea-pr40188.patch  icedtea-pr40616.patch  icedtea-sbcs.patch  icedtea.patch  icedteart.patch  (+23 more)
patches/cacao/: 6714758.patch  arch.patch  arm-arch-defines.patch  arm-memory-barrier.patch  armhf.patch  ignore-tests.patch  ignore-unknown-options.patch  jsig.patch  launcher.patch  memory.patch  native-resolve.patch  no-strict-aliasing.patch  openjdk7.patch  package-version.patch  pr2032.patch  pr2035-tempdir.patch  pr2349.patch  pr2652-classloader.patch  pr2776-cache_api.patch  pr2832-refactoring_error.patch  pr2908-missing_functions.patch  pr2910-8_support.patch  pr3136-unsafe_methods.patch  version-parsing.patch  version.patch  versioninfo.patch  xxoption-warning.patch
patches/debian/: icedtea-uname.patch
patches/ecj/: icedtea-dbcs.patch  icedtea-dyn.patch  icedtea-euctw.patch  icedtea-hotspot-14.0b08.patch  icedtea-hotspot-default.patch  icedtea-jopt.patch  icedtea-pr261.patch  icedtea-pr39408.patch  icedtea-pr40188.patch  icedtea-pr40616.patch  icedtea-sbcs.patch  icedtea-spp.patch  icedtea.patch
patches/extensions/: liveconnect-dist.patch  liveconnect.patch  netx-dist.patch  netx.patch
patches/jamvm/: arm-interp_cflags-marm.patch  find_class_from_caller.patch  gb-memory-fix.patch  ignore-assertions-and-verify-options.patch  ignore-more-XX-options.patch  ignore-unknown-options.patch  jmm_GetLongAttribute_201.patch  mips64el.patch  noexecstack.patch  pr2034-tempdir.patch  pr2665.patch  pr2775-cache_api.patch  pr3134-unsafe_methods.patch  remove-sun.misc.Perf-debug-code.patch
patches/openjdk/: annotation-tests.patch  bidi-tests.patch
patches/ppc/: 8026703-xsl_include.patch
patches/security/: icedtea-4486841.patch  icedtea-6484091.patch  icedtea-6497740.patch  icedtea-6588160.patch  icedtea-6592792.patch  icedtea-6721753.patch  icedtea-6726779.patch  icedtea-6733959.patch  icedtea-6734167.patch  icedtea-6755943.patch
patches/xrender/: icedtea-000.patch  icedtea-001.patch  icedtea-002.patch  icedtea-003.patch  icedtea-004.patch  icedtea-005.patch  icedtea-006.patch  icedtea-007.patch
plugin/icedteanp/: IcedTeaJavaRequestProcessor.cc  IcedTeaJavaRequestProcessor.h  IcedTeaNPPlugin.cc  IcedTeaNPPlugin.h  IcedTeaPluginRequestProcessor.cc  IcedTeaPluginRequestProcessor.h  IcedTeaPluginUtils.cc  IcedTeaPluginUtils.h  IcedTeaRunnable.cc  IcedTeaRunnable.h  IcedTeaScriptablePluginObject.cc  IcedTeaScriptablePluginObject.h
pulseaudio/: AUTHORS  README
pulseaudio/testsounds/: README
scripts/: create_tarballs.sh  create_tarballs8  discover_trees.sh  find_existing_items_one_file.sh  gen_changeset_and_sha256sums.sh  gen_changeset_and_sha256sums_8.sh  jni_create_stap.c  jni_desc  list_openjdk_changes.sh  update_tarballs.sh
tapset/: hotspot.stp.in  hotspot_gc.stp.in  hotspot_jni.stp.in  jstack.stp.in
test/jtreg/: JavaTest.cmdMgrs.lst  JavaTest.toolMgrs.lst  README  excludelist.jdk.cacao.jtx  excludelist.jdk.jtx
test/standalone/: RH1195203.java  TestCryptoLevel.java  TestEllipticCurveCryptoSupport.java
test/tapset/: ClassUnloadedProbeTester.java  JNIStapTest.c  JNITestClass.c  JNITestClass.h  JNITestClass.java  RunWrapper.java  StapJNIClassLoader.java  StapURLClassLoader.java  SystemtapTester.java  TestingRunner.java  jstaptest.pl  jstaptest.pl.in
tools-copy/: tools-corba-copy-files.txt  tools-jaxws-copy-files.txt  tools-jdk-copy-files.txt  tools-langtools-copy-files.txt
(+1907 files in other folders)
